--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@microsoft/office-js-helpers": "^1.0.2",
     "@supabase/supabase-js": "^2.49.8",
     "apexcharts": "^4.7.0",
+    "chart.js": "^4.5.0",
     "handsontable": "^15.3.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
